Add Archestra MCP integration and enhanced features
Major additions:
- MCP-compliant server (mcp_server.py) for Archestra integration
- Successfully tested with Archestra - tools discovered and connected
- Comprehensive integration guide and success documentation
- Docker support for containerized deployment
- Enhanced testing suite with automated tests
- Updated dependencies for MCP SDK support

This implementation demonstrates:
- Real MCP protocol compliance
- Multi-mode operation (standalone + MCP server)
- Production-ready Archestra integration
- Comprehensive testing and documentation

All previous features (REST API, UI, mock agents) remain functional.

--- a/mcp-server-config.json
+++ b/mcp-server-config.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "mcp_version": "2024-11-05",
   "server": {
-    "url": "http://host.docker.internal:10000",
-    "transport": "http"
+    "url": "http://host.docker.internal:10001/mcp",
+    "transport": "streamable-http"
   },
   "capabilities": {
     "tools": [
